turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:11: error: ';' expected but '[' found.
  [colorToSet, move, state] = rule(state)(indice)
  ^